[tool.poetry]
name = "wagtail-toolbox"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]
readme = "README.md"
packages = [{include = "wagtail_toolbox"}]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
