[tool.poetry]
name = "wagtail-toolbox"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]
readme = "README.md"
packages = [{include = "wagtail_toolbox"}]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^4.2"
click = "^8.1.3"
jmespath = "^1.0.1"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"
coverage = "^7.2.2"
responses = "^0.23.1"
tox = "^4.4.8"
faker = "^18.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
